[gd_scene load_steps=2 format=3 uid="uid://b7aygpeqtr04"]

[ext_resource type="Script" path="res://ui/PauseMenu.gd" id="1_jirep"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jirep")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.462745, 0.231373, 0.211765, 0.541176)

[node name="PausedLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -100.0
offset_right = 36.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 33
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 253.0
offset_top = 145.0
offset_right = 383.0
offset_bottom = 249.0
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../RestartButton")
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../ResumeButton")
focus_neighbor_right = NodePath("../QuitButton")
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../RestartButton")
focus_neighbor_right = NodePath("../ResumeButton")
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
